--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "matchdep": "~0.1.2",
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-shell": "~0.3.1",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
